// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultBanner component Should render correct banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeButtonBackground": "#b8f28b",
        "activeButtonBorder": "#78c800",
        "activeButtonHover": "#84dc00",
        "activeLabelBackground": "#ddf4ff",
        "activeLabelBorder": "#1cb0f6",
        "buttonBackground": "#e5e5e5",
        "buttonBorder": "#323c41",
        "correctBannerBackground": "#b8f28b",
        "iconBackground": "#ffffff",
        "incorrectBannerBackground": "#ffc1c1",
        "labelBackground": "#ffffff",
        "labelBorder": "#e5e5e5",
        "labelHover": "#f7f7f7",
        "text": "#323c41",
        "textAreaBackground": "#ffffff",
        "textAreaBorder": "#e5e5e5",
        "undecidedBannerBackground": "#f5f5f5",
      },
    }
  }
>
  <styled.div
    answerStatus="correct"
  >
    <styled.div>
      <Icon
        name="tick"
      />
    </styled.div>
    <styled.div>
      <styled.h2>
        You are correct!
      </styled.h2>
      <styled.span>
        Well done keep going!
      </styled.span>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`ResultBanner component Should render incorrect banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeButtonBackground": "#b8f28b",
        "activeButtonBorder": "#78c800",
        "activeButtonHover": "#84dc00",
        "activeLabelBackground": "#ddf4ff",
        "activeLabelBorder": "#1cb0f6",
        "buttonBackground": "#e5e5e5",
        "buttonBorder": "#323c41",
        "correctBannerBackground": "#b8f28b",
        "iconBackground": "#ffffff",
        "incorrectBannerBackground": "#ffc1c1",
        "labelBackground": "#ffffff",
        "labelBorder": "#e5e5e5",
        "labelHover": "#f7f7f7",
        "text": "#323c41",
        "textAreaBackground": "#ffffff",
        "textAreaBorder": "#e5e5e5",
        "undecidedBannerBackground": "#f5f5f5",
      },
    }
  }
>
  <styled.div
    answerStatus="incorrect"
  >
    <styled.div>
      <Icon
        name="cross"
      />
    </styled.div>
    <styled.div>
      <styled.h2>
        Correct Solution:
      </styled.h2>
      <styled.span>
        En el tren.
      </styled.span>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`ResultBanner component Should render undecided banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeButtonBackground": "#b8f28b",
        "activeButtonBorder": "#78c800",
        "activeButtonHover": "#84dc00",
        "activeLabelBackground": "#ddf4ff",
        "activeLabelBorder": "#1cb0f6",
        "buttonBackground": "#e5e5e5",
        "buttonBorder": "#323c41",
        "correctBannerBackground": "#b8f28b",
        "iconBackground": "#ffffff",
        "incorrectBannerBackground": "#ffc1c1",
        "labelBackground": "#ffffff",
        "labelBorder": "#e5e5e5",
        "labelHover": "#f7f7f7",
        "text": "#323c41",
        "textAreaBackground": "#ffffff",
        "textAreaBorder": "#e5e5e5",
        "undecidedBannerBackground": "#f5f5f5",
      },
    }
  }
>
  <styled.div
    answerStatus="undecided"
  >
    <styled.button>
      Check Result
    </styled.button>
  </styled.div>
</ThemeProvider>
`;
